--- a/static/404.html
+++ b/static/404.html
@@ -1,10 +1,8 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <title>Page not found</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/static/style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="stylesheet" href="/static/style.css" />
 
 <main>
-
-<p>There is no poem here.</p>
-
+  <p>There is no poem here.</p>
 </main>
